ref/Modules/Azure.Service/v0.9.8/Set-AzureVMMicrosoftAntimalwareExtension.md
---
external help file: Microsoft.WindowsAzure.Commands.ServiceManagement.dll-Help.xml
online version: 
schema: 2.0.0
ms.assetid: F1C07F39-C323-4669-8F53-BCF39F7764A9
updated_at: 11/11/2016 11:03 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ServiceManagement/Azure.Service/v0.9.8/Set-AzureVMMicrosoftAntimalwareExtension.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ServiceManagement/Azure.Service/v0.9.8/Set-AzureVMMicrosoftAntimalwareExtension.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf/azureps-cmdlets-docs/ServiceManagement/Azure.Service/v0.9.8/Set-AzureVMMicrosoftAntimalwareExtension.md
ms.topic: reference
ms.prod: powershell
ms.technology: Azure PowerShell
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: False
ms.service: azure-powershell
---

# Set-AzureVMMicrosoftAntimalwareExtension

## SYNOPSIS
Configures the Microsoft Antimalware extension for a virtual machine.

## SYNTAX

### EnableMicrosoftAntimalwareExtensionJsonConfigFilePath (Default)
```
Set-AzureVMMicrosoftAntimalwareExtension [-AntimalwareConfigFile] <String> [[-Version] <String>]
 [[-Monitoring] <String>] [[-StorageContext] <AzureStorageContext>] -VM <IPersistentVM>
 [-Profile <AzureProfile>] [<CommonParameters>]
```

### EnableMicrosoftAntimalwareExtensionJsonConfig
```
Set-AzureVMMicrosoftAntimalwareExtension [-AntimalwareConfiguration] <String> [[-Version] <String>]
 [[-Monitoring] <String>] [[-StorageContext] <AzureStorageContext>] -VM <IPersistentVM>
 [-Profile <AzureProfile>] [<CommonParameters>]
```

### DisableMicrosoftAntimalwareExtension
```
Set-AzureVMMicrosoftAntimalwareExtension [[-Version] <String>] [-Disable] -VM <IPersistentVM>
 [-Profile <AzureProfile>] [<CommonParameters>]
```

### UninstallMicrosoftAntimalwareExtension
```
Set-AzureVMMicrosoftAntimalwareExtension [-Uninstall] -VM <IPersistentVM> [-Profile <AzureProfile>]
 [<CommonParameters>]
```

### ConfigureMicrosoftAntimalwareMonitoring
```
Set-AzureVMMicrosoftAntimalwareExtension [-Monitoring] <String> [[-StorageContext] <AzureStorageContext>]
 [-NoConfig] -VM <IPersistentVM> [-Profile <AzureProfile>] [<CommonParameters>]
```

## DESCRIPTION
The **Set-AzureVMMicrosoftAntimalwareExtension** cmdlet configures the Microsoft Antimalware extension for a virtual machine.
You can enable, disable, or uninstall the extension.

## EXAMPLES

### Example 1: Enable the extension by using a configuration file
```
PS C:\>Get-AzureVM -ServiceName "ContosoService03" -Name "ContosoVM22" | Set-AzureVMMicrosoftAntimalwareExtension -AntimalwareConfigFile 'C:\configuration\contosoVM.json' | Update-AzureVM
```

This command enables the Microsoft Antimalware extension by using a configuration file.
The command uses the Get-AzureVM cmdlet to get the specified virtual machine object, and then passes the object to the current cmdlet by using the pipeline operator.

### Example 2: Enable the extension and enable monitoring
```
PS C:\>$StorageContext = New-AzureStorageContext -StorageAccountName "contosostoragemain" -StorageAccountKey (Get-AzureStorageKey -StorageAccountName "Contosostoragemain").PrimaryP
S C:\> Get-AzureVM -ServiceName "ContosoService03" -Name"ContosoVM22" | Set-AzureVMMicrosoftAntimalwareExtension -AntimalwareConfigFile 'C:\configuration\contosoVM.json" -Monitoring ON -StorageContext $StorageContext | Update-AzureVM
```

The first command creates an AzureStorageContext object by using the New-AzureStorageContext cmdlet, and then stores it in the $StorageContext variable.

### Example 3: Enable the extension by specifying a configuration object
```
PS C:\>$Config_String = [IO.File]::ReadAllText('C:\configuration\contosoVM.json')
PS C:\> Get-AzureVM -ServiceName "ContosoService03" -Name "ContosoVM22" | Set-AzureVMMicrosoftAntimalwareExtension -AntimalwareConfiguration $Config_String | Update-AzureVM
```

The first command creates a string object by reading a JSON configuration for the Microsoft Antimalware extension, and then storing it in the $config_string variable.

### Example 4: Disable the extension
```
PS C:\>Get-AzureVM -ServiceName "ContosoService03" -Name "ContosoVM22" | Set-AzureVMMicrosoftAntimalwareExtension -Disable | Update-AzureVM
```

This command disables the extension without removing it.
The command uses Get-AzureVM to get the specified virtual machine object, and then passes the object to the current cmdlet.

### Example 5: Remove the extension
```
PS C:\>Get-AzureVM -ServiceName "ContosoService03" -Name"ContosoVM22" | Set-AzureVMMicrosoftAntimalwareExtension -Uninstall | Update-AzureVM
```

This command removes the Microsoft Antimalware extension from the virtual machine.
The command uses Get-AzureVM to get the specified virtual machine object, and then passes the object to the current cmdlet.

## PARAMETERS

### -AntimalwareConfigFile
Specifies the absolute path of the Microsoft Antimalware configuration file.
Do not specify this parameter if you specify the AntimalwareConfiguration parameter.
The configuration file must include, at a minimum, the following content to enable the Microsoft Antimalware extension: 

`{ "AntimalwareEnabled": true }`

```yaml
Type: String
Parameter Sets: EnableMicrosoftAntimalwareExtensionJsonConfigFilePath
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Version
Specifies the extension version as a string.

```yaml
Type: String
Parameter Sets: EnableMicrosoftAntimalwareExtensionJsonConfigFilePath, EnableMicrosoftAntimalwareExtensionJsonConfig, DisableMicrosoftAntimalwareExtension
Aliases: 

Required: False
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Monitoring
Specifies whether to collect Microsoft Antimalware events.

The acceptable values for this parameter are:

- ON.
Collect Microsoft Antimalware events to storage context. 
- OFF.
Do not collect Microsoft Antimalware events.

```yaml
Type: String
Parameter Sets: EnableMicrosoftAntimalwareExtensionJsonConfigFilePath, EnableMicrosoftAntimalwareExtensionJsonConfig
Aliases: 

Required: False
Position: 3
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

```yaml
Type: String
Parameter Sets: ConfigureMicrosoftAntimalwareMonitoring
Aliases: 

Required: True
Position: 3
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -StorageContext
Specifies an Azure storage context for Microsoft Antimalware monitoring.

```yaml
Type: AzureStorageContext
Parameter Sets: EnableMicrosoftAntimalwareExtensionJsonConfigFilePath, EnableMicrosoftAntimalwareExtensionJsonConfig, ConfigureMicrosoftAntimalwareMonitoring
Aliases: 

Required: False
Position: 4
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -VM
Specifies the virtual machine as an IPersistentVM object.

```yaml
Type: IPersistentVM
Parameter Sets: (All)
Aliases: InputObject

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### -AntimalwareConfiguration
Specifies a string object that contains the Microsoft Antimalware configuration.
This object must not be $Null or empty.
Do not specify this parameter if you specify the AntimalwareConfigFile parameter.
The configuration object must include, at a minimum, the following content to enable the Microsoft Antimalware extension: 
****{ "AntimalwareEnabled": true }

Microsoft Antimalware JSON configuration sample: 

{
   "AntimalwareEnabled": true, 
   "RealtimeProtectionEnabled": true, 
   "ScheduledScanSettings": {
   "isEnabled": true, 
   "day": 1, 
   "time": 120, 
   "scanType": "Full"
},

"Exclusions": 
{
"Extensions": ".ext1;.ext2",
"Paths": "c:\excluded-path-1;c:\excluded-path-2",
"Processes": "excludedproc1.exe;excludedproc2.exe"
}

}

Notes: 
AntimalwareEnabled is a required parameter.
Values:  true= Enable.
false= Error out as false is not a supported value

RealtimeProtectionEnabled: true/false. 
true = Enable.
false = Disable.
Default is true

ScheduledScanSettings:  
isEnabled=true/false
  day=0-8 (0-daily, 1-Sunday, 2-Monday, ...., 7-Saturday, 8-Disabled) 
  time=0-1440 (measured in minutes after midnight - 60-\>1AM, 120 -\> 2AM, ...
) 
  scanType="Quick" or "Full" (Default is Quick) 
  Note: If isEnabled=true is the only setting provided, the following defaults are set: day=7 (Saturday), time=120 (2 AM), scanType="Quick" 
Exclusions: 
Multiple exclusions in the same list are specified by using semicolon delimiters.

If no exclusions are specified, then the existing exclusions, if any, are overwritten by blank on the system.

```yaml
Type: String
Parameter Sets: EnableMicrosoftAntimalwareExtensionJsonConfig
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Disable
Indicates that the cmdlet disables the Microsoft Antimalware extension.
To re-enable the extension on the same virtual machine, run Set-AzureVMMicrosoftAntimalwareExtension without the Disable parameter.

```yaml
Type: SwitchParameter
Parameter Sets: DisableMicrosoftAntimalwareExtension
Aliases: 

Required: False
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Uninstall
Indicates that this cmdlet uninstalls the Microsoft Antimalware extension from the virtual machine.
If monitoring was turned on, the cmdlet also removes the collection of Microsoft Antimalware events.

```yaml
Type: SwitchParameter
Parameter Sets: UninstallMicrosoftAntimalwareExtension
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -NoConfig

```yaml
Type: SwitchParameter
Parameter Sets: ConfigureMicrosoftAntimalwareMonitoring
Aliases: 

Required: True
Position: 3
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Profile
Specifies the Azure profile from which this cmdlet reads.
If you do not specify a profile, this cmdlet reads from the local default profile.

```yaml
Type: AzureProfile
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Get-AzureVMMicrosoftAntimalwareExtension](xref:ServiceManagement/Azure.Antimalware/v0.9.8/Get-AzureVMMicrosoftAntimalwareExtension.md)

[Remove-AzureVMMicrosoftAntimalwareExtension](xref:ServiceManagement/Azure.Antimalware/v0.9.8/Remove-AzureVMMicrosoftAntimalwareExtension.md)

[Get-AzureVM](xref:ServiceManagement/Azure.Service/v0.9.8/Get-AzureVM.md)


